--- a/lms/templates/discussion/index.html
+++ b/lms/templates/discussion/index.html
@@ -2,6 +2,9 @@
 <%! import django_comment_client.helpers as helpers %>
 <%! from django.template.defaultfilters import escapejs %>
 <%! from django.core.urlresolvers import reverse %>
+<%doc>
+    We overrride this template just to allow <include> tag to load our own _js_head_dependencies.html
+</%doc>
 
 <%inherit file="../main.html" />
 <%namespace name='static' file='../static_content.html'/>
