Override password reset templates

--- a/lms/templates/registration/password_reset_confirm.html
+++ b/lms/templates/registration/password_reset_confirm.html
@@ -1,61 +1,31 @@
-{% extends "main_django.html" %}
+{% extends "base_password_reset.html" %}
 {% load i18n %}
+{% load compressed %}
+{% load staticfiles %}
 
-{% block title %}
-<title>
-  {% blocktrans with platform_name=platform_name %}
-      Reset Your {{ platform_name }} Password
-  {% endblocktrans %}
-</title>
-{% endblock %}
+  {% block title %}
+     {% blocktrans with platform_name=platform_name %}Reset Your {{ platform_name }} Password{% endblocktrans %}
+  {% endblock %}
 
-{% block bodyextra %}
-  <script type="text/javascript">
-    $(function() {
 
-      // adding js class for styling with accessibility in mind
-      $('body').addClass('js');
+  {% block introduction %}
+      <header>
+        <h1>
+          {% blocktrans with platform_name=platform_name %}Reset Your {{ platform_name }} Password{% endblocktrans %}
+        </h1>
+      </header>
+  {% endblock %}
 
-      // new window/tab opening
-      $('a[rel="external"], a[class="new-vp"]')
-      .click( function() {
-      window.open( $(this).attr('href') );
-      return false;
-      });
 
-      // form field label styling on focus
-      $("form :input").focus(function() {
-        $("label[for='" + this.id + "']").parent().addClass("is-focused");
-      }).blur(function() {
-        $("label").parent().removeClass("is-focused");
-      });
-    });
-  </script>
-{% endblock %}
 
-{% block bodyclass %}view-passwordreset{% endblock %}
-
-{% block body %}
-  <section class="introduction">
-    <header>
-      <h1 class="title">
-        <span class="title-super">
-          {% blocktrans with platform_name=platform_name %}
-          Reset Your {{ platform_name }} Password
-          {% endblocktrans %}
-        </span>
-      </h1>
-    </header>
-  </section>
-
-  <section class="passwordreset container">
+  {% block content %}
     <section role="main" class="content">
       {% if validlink %}
       <header>
       <h2 class="sr">{% trans "Password Reset Form" %}</h2>
       </header>
 
-      <form role="form" id="passwordreset-form" method="post" action="">{% csrf_token %}
+      <form role="form" id="passwordreset-form" method="post" data-remote="true" action="">{% csrf_token %}
         <!-- status messages -->
         <div role="alert" class="status message">
           <h3 class="message-title">
@@ -91,11 +61,7 @@
         </div>
 
         <p class="instructions">
-        {% trans 'Please enter your new password twice so we can verify you typed it in correctly.' %}
-        <br />
-        {% blocktrans with bold_start='<strong class="indicator">' bold_end='</strong>' %}
-        Required fields are noted by {{bold_start}}bold text and an asterisk (*){{bold_end}}.
-        {% endblocktrans %}
+        {% trans 'Please enter your new password twice so we can verify you typed it in correctly. <br /> Required fields are noted by <strong class="indicator">bold text and an asterisk (*)</strong>.' %}
         </p>
 
         <fieldset class="group group-form group-form-requiredinformation">
@@ -140,11 +106,15 @@
       <div class="cta cta-help">
         <h3>{% trans "Need Help?" %}</h3>
         <p>
-          {% blocktrans with start_link='<a href="{{MKTG_URL_FAQ}}">' end_link='</a>' %}
+          {% blocktrans with start_link='<a href="/help">' end_link='</a>' %}
               View our {{ start_link }}help section for contact information and answers to commonly asked questions{{ end_link }}
           {% endblocktrans %}
         </p>
       </div>
     </aside>
   </section>
-{% endblock %}
+
+  {% endblock %}
+
+
+
