--- a/lms/templates/registration/password_reset_email.html
+++ b/lms/templates/registration/password_reset_email.html
@@ -1,15 +1,15 @@
 {% load i18n %}{% load url from future %}{% autoescape off %}
-{% blocktrans %}You're receiving this e-mail because you requested a password reset for your user account at {{ site_name }}.{% endblocktrans %}
+{% blocktrans %}You're receiving this e-mail because you requested a password reset for your user account at FUN.{% endblocktrans %}
 
 {% trans "Please go to the following page and choose a new password:" %}
 {% block reset_link %}
 {{ protocol }}://{{ site_name }}{% url 'student.views.password_reset_confirm_wrapper' uidb36=uid token=token %}
 {% endblock %}
 
-{% trans "If you didn't request this change, you can disregard this email - we have not yet reset your password." %}
+{% blocktrans %}If you didn't request this change, you can disregard this email - we have not yet reset your password.{% endblocktrans %}
 
 {% trans "Thanks for using our site!" %}
 
-{% blocktrans %}The {{ platform_name }} Team{% endblocktrans %}
+{% blocktrans %}The FUN Team{% endblocktrans %}
 
 {% endautoescape %}
