--- a/lms/templates/login.html
+++ b/lms/templates/login.html
@@ -1,33 +1,28 @@
+<%! from django.utils.translation import ugettext as _ %>
+
 <%inherit file="main.html" />
-<%! from microsite_configuration import microsite %>
+
 <%namespace name='static' file='static_content.html'/>
 
 <%! from django.core.urlresolvers import reverse %>
 <%! from django.utils.translation import ugettext as _ %>
-<%! import third_party_auth %>
-<%! from third_party_auth import provider, pipeline %>
 
-<%block name="pagetitle">${_("Log into your {platform_name} Account").format(platform_name=platform_name)}</%block>
-
-<%block name="bodyclass">view-login</%block>
+<%block name="title"><title>${_("Log into your {platform_name} Account").format(platform_name=settings.PLATFORM_NAME)}</title></%block>
 
 <%block name="js_extra">
   <script type="text/javascript">
     $(function() {
 
-      // adding js class for styling with accessibility in mind
-      $('body').addClass('js');
+      var view_name = 'view-login';
 
-      // show forgot password modal UI if URL contains matching DOM ID
-      if ($.deparam.fragment()['forgot-password-modal'] !== undefined) {
-        $('.pwd-reset').click();
-      }
+      // adding js class for styling with accessibility in mind
+      $('body').addClass('js').addClass(view_name);
 
       // new window/tab opening
       $('a[rel="external"], a[class="new-vp"]')
       .click( function() {
-        window.open( $(this).attr('href') );
-        return false;
+      window.open( $(this).attr('href') );
+      return false;
       });
 
       // form field label styling on focus
@@ -36,8 +31,6 @@
       }).blur(function() {
         $("label").parent().removeClass("is-focused");
       });
-
-      $("#email").focus();
     });
 
     (function() {
@@ -47,28 +40,14 @@
         toggleSubmitButton(false);
       });
 
-      $('#login-form').on('ajax:error', function(event, request, status_string) {
+      $('#login-form').on('ajax:error', function() {
         toggleSubmitButton(true);
-
-        if (request.status === 403) {
-          $('.message.submission-error').removeClass('is-shown');
-          $('.third-party-signin.message').addClass('is-shown').focus();
-          $('.third-party-signin.message .instructions').html(request.responseText);
-        } else {
-          $('.third-party-signin.message').removeClass('is-shown');
-          $('.message.submission-error').addClass('is-shown').focus();
-          $('.message.submission-error').html(gettext("Your request could not be completed.  Please try again."));
-        }
       });
 
       $('#login-form').on('ajax:success', function(event, json, xhr) {
         if(json.success) {
           var u=decodeURI(window.location.search);
-          var next = u.split("next=")[1];
-          if (next != undefined) {
-            // if next is undefined, decodeURI returns "undefined" causing a bad redirect.
-            next = decodeURIComponent(next);
-          }
+          next=u.split("next=")[1];
           if (next && !isExternal(next)) {
             location.href=next;
           }  else if(json.redirect_url){
@@ -88,11 +67,6 @@
           $('.message.submission-error .message-copy').html(json.value);
         }
       });
-      $("#forgot-password-link").click(function() {
-        $("#forgot-password-modal").show();
-        $("#forgot-password-modal .close-modal").focus();
-      });
-
     })(this);
 
     function toggleSubmitButton(enable) {
@@ -101,42 +75,23 @@
       if(enable) {
         $submitButton.
           removeClass('is-disabled').
-          attr('aria-disabled', false).
           removeProp('disabled').
-          html("${_('Log into My {platform_name} Account').format(platform_name=platform_name)} <span class='orn-plus'>+</span> ${_('Access My Courses')}");
+          html("${_('Log into My {platform_name} Account').format(platform_name=settings.PLATFORM_NAME)} <span class='orn-plus'>+</span> ${_('Access My Courses')}");
       }
       else {
         $submitButton.
           addClass('is-disabled').
           prop('disabled', true).
-          text("${_(u'Processing your account information')}");
+          html(gettext("${_('Processing your account information')} &hellip;"));
       }
     }
-
-    function thirdPartySignin(event, url) {
-      event.preventDefault();
-      window.location.href = url;
-    }
-
-    (function post_form_if_pipeline_running(pipeline_running) {
-       // If the pipeline is running, the user has already authenticated via a
-       // third-party provider. We want to invoke /login_ajax to loop in the
-       // code that does logging and sets cookies on the request. It is most
-       // consistent to do that by using the same mechanism that is used when
-       // the use does first-party sign-in: POSTing the sign-in form.
-       if (pipeline_running) {
-         $('#login-form').submit();
-       }
-    })(${pipeline_running})
   </script>
 </%block>
 
 <section class="introduction">
   <header>
-    <h1 class="title">
-      <span class="title-super">${_("Please log in")}</span>
-      <span class="title-sub">${_("to access your account and courses")}</span>
-    </h1>
+    <img class="illustration" src="${static.url('themes/fun/images/illustrations/register.jpg')}" />
+    <h1 class="sr">${_("PLEASE LOG IN to access your account and courses")}</h1>
   </header>
 </section>
 
@@ -146,45 +101,41 @@
 
       <!-- status messages -->
       <div role="alert" class="status message">
-        <h3 class="message-title">${_("We're Sorry, {platform_name} accounts are unavailable currently").format(platform_name=platform_name)}</h3>
+        <h3 class="message-title">${_("We're Sorry, {platform_name} accounts are unavailable currently").format(platform_name=settings.PLATFORM_NAME)}</h3>
+        <p class="message-copy">Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Lorem ipsum dolor sit amet, consectetuer adipiscing elit.</p>
       </div>
 
       <div role="alert" class="status message submission-error" tabindex="-1">
-        <h3 class="message-title">${_("We couldn't log you in.")} </h3>
+        <h3 class="message-title">${_("The following errors occured while logging you in:")} </h3>
         <ul class="message-copy">
           <li>${_("Your email or password is incorrect")}</li>
         </ul>
       </div>
 
-      <div role="alert" class="third-party-signin message" tabindex="-1">
-        <p class="instructions"> </p>
-      </div>
-
       <p class="instructions sr">
-        ${_('Please provide the following information to log into your {platform_name} account. Required fields are noted by <strong class="indicator">bold text and an asterisk (*)</strong>.').format(platform_name=platform_name)}
+        ${_('Please provide the following information to log into your {platform_name} account. Required fields are noted by <strong class="indicator">bold text and an asterisk (*)</strong>.').format(platform_name=settings.PLATFORM_NAME)}
       </p>
 
-      <div class="group group-form group-form-requiredinformation">
-        <h2 class="sr">${_('Required Information')}</h2>
+      <fieldset class="group group-form group-form-requiredinformation">
+        <legend class="sr">${_('Required Information')}</legend>
 
         <ol class="list-input">
           <li class="field required text" id="field-email">
             <label for="email">${_('E-mail')}</label>
-            <input class="" id="email" type="email" name="email" value="" placeholder="${_('example: username@domain.com')}" required aria-required="true" aria-described-by="email-tip" />
-            <span class="tip tip-input" id="email-tip">${_("This is the e-mail address you used to register with {platform}").format(platform=platform_name)}</span>
+            <input class="" id="email" type="email" name="email" value="" placeholder="${_('example: username@domain.com')}" required aria-required="true" />
           </li>
           <li class="field required password" id="field-password">
             <label for="password">${_('Password')}</label>
             <input id="password" type="password" name="password" value="" required aria-required="true" />
             <span class="tip tip-input">
-              <a href="#forgot-password-modal" rel="leanModal" class="pwd-reset action action-forgotpw" id="forgot-password-link" role="button" aria-haspopup="true">${_('Forgot password?')}</a>
+              <a href="#forgot-password-modal" rel="leanModal" class="pwd-reset action action-forgotpw">${_('Forgot password?')}</a>
             </span>
           </li>
         </ol>
-      </div>
+      </fieldset>
 
-      <div class="group group-form group-form-secondary group-form-accountpreferences">
-        <h2 class="sr">${_('Account Preferences')}</h2>
+      <fieldset class="group group-form group-form-secondary group-form-accountpreferences">
+        <legend class="sr">${_('Account Preferences')}</legend>
 
         <ol class="list-input">
           <li class="field required checkbox" id="field-remember">
@@ -192,52 +143,43 @@
             <label for="remember-yes">${_('Remember me')}</label>
           </li>
         </ol>
-      </div>
+      </fieldset>
 
 % if course_id and enrollment_action:
       <input type="hidden" name="enrollment_action" value="${enrollment_action | h}" />
       <input type="hidden" name="course_id" value="${course_id | h}" />
 % endif
 
-% if email_opt_in:
-      <input type="hidden" name="email_opt_in" value="${email_opt_in | h}" />
-% endif
-
       <div class="form-actions">
-        <button name="submit" type="submit" id="submit" class="action action-primary action-update login-button"></button>
+        <button name="submit" type="submit" id="submit" class="action action-primary action-update"></button>
       </div>
     </form>
-
-    % if third_party_auth.is_enabled():
-
-      <span class="deco-divider">
-        ## Developers: this is a sentence fragment, which is usually frowned upon.  The design of the pags uses this fragment to provide an "else" clause underneath a number of choices.  It's OK to leave it.
-        ## Translators: this is the last choice of a number of choices of how to log in to the site.
-        <span class="copy">${_('or')}</span>
-      </span>
-
-    <div class="form-actions form-third-party-auth">
-
-    % for enabled in provider.Registry.enabled():
-      ## Translators: provider_name is the name of an external, third-party user authentication provider (like Google or LinkedIn).
-      <button type="submit" class="button button-primary button-${enabled.NAME} login-${enabled.NAME}" onclick="thirdPartySignin(event, '${pipeline_url[enabled.NAME]}');"><span class="icon fa ${enabled.ICON_CLASS}"></span>${_('Sign in with {provider_name}').format(provider_name=enabled.NAME)}</button>
-    % endfor
-
-    </div>
-
-    % endif
-
   </section>
 
   <aside role="complementary">
+    <header>
+      <h2 class="sr">${_("Helpful Information")}</h2>
+    </header>
 
-<%
-  # allow for microsite overrides on the registration sidebars, otherwise default to pre-existing ones
-  sidebar_file = microsite.get_template_path('login-sidebar.html')
-%>
+    % if settings.FEATURES.get('AUTH_USE_OPENID'):
+    <!-- <div class="cta cta-login-options-openid">
+      <h3>${_("Login via OpenID")}</h3>
+      <p>${_('You can now start learning with {platform_name} by logging in with your <a rel="external" href="http://openid.net/">OpenID account</a>.').format(platform_name=settings.PLATFORM_NAME)}</p>
+      <a class="action action-login-openid" href="#">${_("Login via OpenID")}</a>
+    </div> -->
+    % endif
 
-    <%include file="${sidebar_file}" />
+    <div class="cta cta-help">
+      <h3>${_("Not Enrolled?")}</h3>
+      <p><a href="${reverse('register_user')}">${_("Sign up for {platform_name} today!").format(platform_name=settings.PLATFORM_NAME)}</a></p>
 
+      ## Disable help unless the FAQ marketing link is enabled
+        <h3>${_("Need Help?")}</h3>
+        <p>${_("Looking for help in logging in or with your {platform_name} account?").format(platform_name=settings.PLATFORM_NAME)}
+        <a href="${marketing_link('HELP')}">
+            ${_("View our help section for answers to commonly asked questions.")}
+        </a></p>
+    </div>
   </aside>
   </section>
 
