--- a/lms/templates/register-sidebar.html
+++ b/lms/templates/register-sidebar.html
@@ -41,6 +41,37 @@ from django.core.urlresolvers import reverse
   % endif
 </div>
 
+<div class="cta cta-confidentiality">
+
+  <h3>${_("Confidentiality")}</h3>
+
+  <p>
+    Les informations recueillies font l’objet d’un traitement informatique destiné à permettre l’inscription, le suivi des cours, la participation aux activités pédagogiques et aux évaluations, la délivrance d’attestations et/ou de certificats.<br>
+    Les destinataires des données sont :
+    <ul>
+    <li>Les enseignants des équipes pédagogiques et les représentants officiels des établissements porteurs des cours, pour les données à caractère personnel.<li>
+    <li>Des équipes de recherche en sciences cognitives et de l’éducation, habilitées par le ministère en charge de l’Enseignement supérieur, pour les données d’usage anonymisées.</li>
+    </ul>
+  </p>
+  <p>
+    Conformément à la loi «&nbsp;informatique et libertés&nbsp;» du 6 janvier 1978 modifiée en 2004, vous bénéficiez d’un droit d’accès et de rectification aux informations qui vous concernent, que vous pouvez exercer en vous adressant à :</p>
+    <address class="vcard">
+      <div class="adr">
+
+        <span class="org">Ministère de l'Éducation nationale, de l'Enseignement supérieur et de la Recherche</span><br>
+        <span class="org">Direction générale de l'enseignement supérieur et de l'insertion professionnelle</span><br>
+        <span class="org">Plateforme FUN-MOOC</span><br>
+
+        <span class="street-address">1, rue Descartes</span><br>
+        <span class="postal-code">75231</span> <span class="locality">Paris Cedex 05</span><br><br>
+      </div>
+    </address>
+  <p>
+    Vous pouvez également, pour des motifs légitimes, vous opposer au traitement des données vous concernant.
+  </p>
+</div>
+
+
 % if settings.MKTG_URL_LINK_MAP.get('FAQ'):
   <div class="cta cta-help">
     <h3>${_("Need Help?")}</h3>
