--- a/lms/static/sass/multicourse/_account.scss
+++ b/lms/static/sass/multicourse/_account.scss
@@ -4,17 +4,27 @@
 // Account-Centric (Login/Register)
 // =====
 
+@mixin marketing-typography {
+  display: block;
+  font-family: $sans-serif;
+  line-height: lh(1);
+}
+
+@mixin body-text {
+  @include marketing-typography;
+  font-size: 15px;
+  margin: 0 0 $baseline 0;
+  color: $base-font-color;
+  line-height: lh(1);
+}
+
 // page-level
 .view-register, .view-login, .view-passwordreset {
   background: $container-bg;
 
-
-
   // edx.org - marketing typography
-  %heading-1, %heading-2, %heading-3, %heading-4, %heading-5, %body-text-emphasized, %body-text, %button-primary, %button-secondary {
-    display: block;
-    font-family: $sans-serif;
-    line-height: lh(1);
+  %heading-1, %heading-2, %heading-3, %heading-4, %heading-5, %body-text-emphasized, %button-primary, %button-secondary {
+      @include marketing-typography;
   }
 
   %heading-2 {
@@ -51,13 +61,6 @@
     color: $base-font-color;
     font-family: 'Open Sans', sans-serif;
     line-height: lh(1.1);
-  }
-
-  %body-text {
-    font-size: 15px;
-    margin: 0 0 $baseline 0;
-    color: $base-font-color;
-    line-height: lh(1);
   }
 
   // specific examples - buttons
@@ -162,12 +165,11 @@
 
   // reset - horrible, but necessary
   // At FUN we split the reset clause in two parts in order to avoid a truncated directive line issue in Chrome.
-  p, ol, ul, label, input, textarea {
-    @extend %body-text;
+  p, ol, ul, h1, h2, h3, h4, h5, h6, label, input, textarea {
+    @include body-text;
   }
 
   h1, h2, h3, h4, h5, h6 {
-    @extend %body-text;
     letter-spacing: 0;
   }
 
@@ -580,7 +582,7 @@
     }
 
     .message-copy {
-      @extend %body-text;
+      @include body-text;
       margin: 0 !important;
       padding: 0;
       list-style: none;
@@ -747,7 +749,7 @@
   }
 
   .modal-form-error {
-    @extend %body-text;
+    @include body-text;
     box-shadow: inset 0 -1px 2px 0 tint($red, 85%);
     @include box-sizing(border-box);
     margin: $baseline 0 ($baseline/2) 0 !important;
