--- a/common/lib/capa/capa/templates/optioninput.html
+++ b/common/lib/capa/capa/templates/optioninput.html
@@ -10,14 +10,12 @@
           % endif
           > ${option_description}</option>
       % endfor
-    </select>
-
-  <span id="answer_${id}"></span>  
-  <span class="status ${status.classname}"
-      id="status_${id}"
-      aria-describedby="input_${id}">
-    <span class="sr">${value|h} - ${status.display_name}</span>
+   </select>
+   
+  <span class="status ${status.classname}" id="status_${id}" aria-describedby="input_${id}">
+      <span class="sr">${value|h} - ${status.display_name}</span>
   </span>
+  <p  class="answer" id="answer_${id}"></p>  
 
   % if msg:
       <span class="message">${msg|n}</span>
